Add some german naming and add padding to shop

--- a/themes/feuerwehr-hungen/scss/shop.scss
+++ b/themes/feuerwehr-hungen/scss/shop.scss
@@ -9,6 +9,7 @@ h1 {
   padding-top: 2rem;
   justify-content: space-evenly;
   align-items: flex-start;
+  padding-bottom: 300px;
 }
 
 .product-card {
