--- a/themes/feuerwehr-hungen/templates/modular/webshop-orders.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop-orders.html.twig
@@ -248,7 +248,7 @@
 {% set grid_size = theme_var('grid-size') %}
 <section class="section">
     <section class="container order-container">
-        <h1>Order Overview</h1>
+        <h1>Bestellübersicht</h1>
         <div class="columns">
             <div class="column col-md-12 col-8">
                 <h2>Einzelne Bestellungen</h2>
@@ -266,7 +266,7 @@
                 </table>
                 </div>
                 <div class="button-container">
-                    <button class="btn btn-primary download-button">Download CSV</button>
+                    <button class="btn btn-primary download-button">Download Liste</button>
                 </div>
             </div>
             <div class="column col-md-12 col-4">
@@ -275,9 +275,9 @@
                 <table class="table table-striped total-order-table">
                     <thead>
                     <tr>
-                        <th>Product Name</th>
-                        <th>Size</th>
-                        <th>Quantity</th>
+                        <th>Produkt Name</th>
+                        <th>Größe</th>
+                        <th>Anzahl</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -286,7 +286,7 @@
                 </table>
                 </div>
                 <div class="button-container">
-                    <button class="btn btn-error finish-button">Finish Order</button>
+                    <button class="btn btn-error finish-button">Bestellung Fertig</button>
                 </div>
             </div>
         </div>
