--- a/themes/feuerwehr-hungen/scss/shop.scss
+++ b/themes/feuerwehr-hungen/scss/shop.scss
@@ -22,7 +22,9 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 45%;
+  height: 80%;
   text-align: center;
+  box-shadow: 5px 5px lightblue;
 }
 
 .container{
