--- a/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
@@ -1,59 +1,17 @@
-{% set styling %}
-
-.menu-bar {
-  border-radius: 25px;
-  height: fit-content;
-  display: inline-flex;
-  background-color: rgba(0, 0, 0, .4);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  align-items: center;
-  padding: 0 10px;
-  margin: 50px 0 0 0;
-  li {
-    list-style: none;
-    color: white;
-    font-family: sans-serif;
-    font-weight: bold;
-    padding: 12px 16px;
-    margin: 0 8px;
-    position: relative;
-    cursor: pointer;
-    white-space: nowrap;
-    &::before {
-     content: " ";
-     position: absolute;
-     top: 0;
-     left:0;
-     height:100%;
-     width: 100%;
-     z-index:-1;
-     transition: .2s;
-     border-radius: 25px;
-    }
-      &:hover {
-        &::before {
-            background: linear-gradient(to bottom, #e8edec, #d2d1d3);
-            box-shadow: 0px 3px 20px 0px black;
-            transform: scale(1.2);
-        }
-        color: black;
-    }
-  }
-}
-
-{% endset %}
-
-{% do assets.addInlineCss(styling) %}
+<head>
+    <link rel="stylesheet" href="{{ url('theme://css-compiled/modular-nav.min.css') }}"/>
+</head>
 
 <section class="section modular-navbar modular-hero hero">
-    <div class="container">
-        <ul class="menu-bar">
-            <li>Feuerwehr Wiki</li>
-            <li><a href="{{ url('/intern') }}">Shop</a></li>
-            <li><a href="{{ url('/bestellungen') }}">Bestellungen</a></li>
-            <li>Anwesenheitsliste</li>
-            <li>Einsatzliste</li>
-        </ul>
+    <div class="modular-nav-container">
+        <nav class="modular-nav">
+            <ul class="nav--ul__one">
+                <li class="nav-link"><a href="#">Feuerwehr Wiki</a></li>
+                <li class="nav-link"><a href="#">Shop</a></li>
+                <li class="nav-link"><a href="#">Bestellungen</a></li>
+                <li class="nav-link"><a href="#">Anwesenheit</a></li>
+                <li class="nav-link"><a href="#">Einsätze</a></li>
+            </ul>
+        </nav>
     </div>
 </section>
