--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -260,17 +260,17 @@
 {% set directory = flex.directory('products') %}
 {% set list = directory.collection() %}
 
-<h1 class="">Shopping Cart</h1>
+<h1 class="">Vereins Shop</h1>
 <div class="body">
-    <div class="container">
-        <h3 class="heading">Products</h3>
+    <div class="container shop-container">
+        <h3 class="heading">Produkte</h3>
         <div class="product-list" data-list="{{ list|json_encode() }}">
             <div class="result"></div>
         </div>
     </div>
     <div class="cart">
         <div class="cart-header">
-            <h3>CART</h3>
+            <h3>Einkaufswagen</h3>
             <p class="noOfItems">0 items</p>
         </div>
         <hr noshade="true" size="1px"/>
