--- a/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
@@ -6,9 +6,9 @@
     <div class="modular-nav-container">
         <nav class="modular-nav">
             <ul class="nav--ul__one">
-                <li class="nav-link"><a href="#">Feuerwehr Wiki</a></li>
-                <li class="nav-link"><a href="#">Shop</a></li>
-                <li class="nav-link"><a href="#">Bestellungen</a></li>
+                <li class="nav-link"><a href="https://wiki.ffinh.de/">Feuerwehr Wiki</a></li>
+                <li class="nav-link"><a href="{{ url('/intern') }}">Shop</a></li>
+                <li class="nav-link"><a href="{{ url('/bestellungen') }}">Bestellungen</a></li>
                 <li class="nav-link"><a href="#">Anwesenheit</a></li>
                 <li class="nav-link"><a href="#">Einsätze</a></li>
             </ul>
