--- a/themes/feuerwehr-hungen/scss/shop.scss
+++ b/themes/feuerwehr-hungen/scss/shop.scss
@@ -16,8 +16,6 @@
   }
 }
 
-
-
 h1 {
   text-align: center;
   margin: 1rem 0;
@@ -25,6 +23,7 @@ h1 {
 
 .cart-h4 {
   margin-top: 0;
+  padding: 0;
 }
 
 .body {
