Add module id for webshop

--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -259,7 +259,7 @@
 {% set flex = grav.get('flex') %}
 {% set directory = flex.directory('products') %}
 {% set list = directory.collection() %}
-
+<div class="module-content" data-module-id="shop">
 <h1 class="">Vereins Shop</h1>
 <div class="body">
     <div class="columns">
@@ -296,4 +296,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
