Add module id to webshop

--- a/themes/feuerwehr-hungen/templates/modular/webshop-orders.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop-orders.html.twig
@@ -272,6 +272,7 @@
     }
 
 </script>
+<div class="module-content" data-module-id="bestellung">
 {% set grid_size = theme_var('grid-size') %}
 <section class="section">
     <section class="container order-container">
@@ -339,3 +340,4 @@
 
     </section>
 </section>
+</div>
