--- a/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/modular-navbar.html.twig
@@ -7,10 +7,13 @@
         <nav class="modular-nav">
             <ul class="nav--ul__one">
                 <li class="nav-link"><a href="https://wiki.ffinh.de/">Feuerwehr Wiki</a></li>
-                <li class="nav-link"><a href="{{ url('/intern') }}">Shop</a></li>
-                <li class="nav-link"><a href="{{ url('/bestellungen') }}">Bestellungen</a></li>
-                <li class="nav-link"><a href="#">Anwesenheit</a></li>
-                <li class="nav-link"><a href="#">Einsätze</a></li>
+                {% for module in page.collection() %}
+                    {% if module.header.menu %}
+                        <li>
+                            <a href="#{{ module.menu|hyphenize }}" data-target="{{ module.menu|hyphenize }}" class="tab-link">{{ module.menu }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
             </ul>
         </nav>
     </div>
