--- a/themes/feuerwehr-hungen/templates/modular/video-cards.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/video-cards.html.twig
@@ -71,7 +71,7 @@
                                     </div>
                                     <div class="card-title">
                                         <h5 class="p-name mt-1">
-                                            {{ entry.title }}
+                                            {{ entry.title }} {{ entry.cardVideo }}
                                         </h5>
                                     </div>
                                 </div>
