Add intern2 for test purpose

--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -260,7 +260,7 @@
 {% set directory = flex.directory('products') %}
 {% set list = directory.collection() %}
 <div class="module-content" data-module-id="shop">
-<h1 class="">Vereins Shop</h1>
+<h1 class="">Shop</h1>
 <div class="body">
     <div class="columns">
         <div class="column col-md-12 col-8">
