--- a/plugins/login/templates/partials/login-status.html.twig
+++ b/plugins/login/templates/partials/login-status.html.twig
@@ -1,5 +1,9 @@
 <span class="login-status">
     {% if grav.user.authenticated %}
-        <strong>{{ grav.user.fullname ?: grav.user.username }}</strong>, <a class="logout" href="{{ url(uri.addNonce((uri.path)|trim('/') ~ '/task' ~ config.system.param_sep ~ 'login.logout', 'logout-form', 'logout-nonce'))|e }}">{{ 'PLUGIN_LOGIN.BTN_LOGOUT'|t }}</a>
+            {% if grav.user.username == 'einsatzabteilung' %}
+                <strong></strong>
+            {% else %}
+                    <strong>{{ grav.user.fullname ?: grav.user.username }}</strong>
+            {% endif %}, <a class="logout" href="{{ url(uri.addNonce((uri.path)|trim('/') ~ '/task' ~ config.system.param_sep ~ 'login.logout', 'logout-form', 'logout-nonce'))|e }}">{{ 'PLUGIN_LOGIN.BTN_LOGOUT'|t }}</a>
     {% endif %}
 </span>
