Add navcards template and first entry

--- a/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/profiles.html.twig
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="   {{ url('theme://css-compiled/profiles.min.css') }}"/>
+
 {% block stylesheets %}
     {% do assets.addCss('theme://css-compiled/profiles.min.css') %}
 {% endblock %}
