--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -6,6 +6,7 @@ $fw-yellow: #E6B01D;
 $fw-text-underline: #6D6E6F;
 $fw-orange: #e24c31;
 $fw-light-yellow: #ffff00;
+$fw-light-background: #2761c3;
 
 #body-wrapper {
   background: $fw-background;
