Adjust image save location in blueprint

--- a/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/nav-cards.html.twig
@@ -10,7 +10,7 @@
             {% for card in page.header.cards %}
             <div class="column card-column col-4 col-md-6 col-sm-12 ">
                 <div class="card-hero">
-                    <img class="hero-profile-img" src="{{ url('user/images/nav-cards/' ~ card.bg_image) }}" alt="">
+                    <img class="hero-profile-img" src="{{ url('user/images/navCards-images/' ~ card.bg_image) }}" alt="">
                     <div class="hero-description-bk"></div>
                     <div class="hero-logo">
                         <i class="{{ card.icon }} fa-2xl"></i>
