--- a/themes/feuerwehr-hungen/scss/nav-cards.scss
+++ b/themes/feuerwehr-hungen/scss/nav-cards.scss
@@ -17,7 +17,6 @@
 }
 
 .hero-description-bk {
-  background-image: linear-gradient(0deg , #2761c3, #063480);
   border-radius: 30px;
   position: absolute;
   top: 55%;
@@ -52,13 +51,13 @@
   left: 30px;
   overflow:hidden;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
+  display: table;
 
   i {
-    margin: auto;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
     color: #fff;
-    position: absolute;
-    left: 20%;
-    top: 45%;
     font-size: 250%;
   }
 }
