--- a/themes/feuerwehr-hungen/scss/nav-cards.scss
+++ b/themes/feuerwehr-hungen/scss/nav-cards.scss
@@ -1,14 +1,20 @@
+.card-column{
+  display: grid;
+}
 .card-hero {
-  display: inline-block;
+  //display: inline-block;
   position: relative;
   width: 350px;
   min-width: 300px;
   height: 400px;
   border-radius: 30px;
   overflow:hidden;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 15px 60px rgba(0, 0, 0, 0.3);
   margin: 30px;
   transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+  cursor: pointer;
+  align-self: center;
+  grid-area: card;
 }
 
 .card-hero:hover {
