Revamp shop styling

--- a/themes/feuerwehr-hungen/scss/fw-main.scss
+++ b/themes/feuerwehr-hungen/scss/fw-main.scss
@@ -8,7 +8,7 @@ $fw-orange: #e24c31;
 $fw-light-yellow: #ffff00;
 $fw-light-background: #2761c3;
 
-#body-wrapper {
+#page-wrapper {
   background: $fw-background;
 }
 
