--- a/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
+++ b/themes/feuerwehr-hungen/templates/modular/webshop.html.twig
@@ -309,7 +309,7 @@
                 <div class="cart-input">
                     <label class="input">
                         <input class="input__field" id="csv-name" type="text" placeholder=" " />
-                        <span class="input__label">Besteller</span>
+                        <span class="input__label">Vorname und Nachname</span>
                     </label>
                 </div>
 
